--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 			:root {
 				--first-child-width: 150px;
 				--primary-color: gainsboro;
-				--secondary-color: #555;
+				--secondary-color: black;
 				--tertiary-color: #eee;
 				--code-color: #f9f9f9;
 				--border-width: 1px;
