--- a/templates/index.html
+++ b/templates/index.html
@@ -3,48 +3,28 @@
 {{ define "content" }}
 
 <section>
-	<h2>Notes</h2>
+	<h2>Notes / Posts</h2>
 	<table>
 		<thead>
 			<tr>
 				<th>Date</th>
+				<th width="20"></th>
 				<th>Title</th>
 				<th></th>
 			</tr>
 		</thead>
 		<tbody>
 			{{ range .Pages }}
-				{{ if and (not .Draft) (eq .Type "note") }}
+				{{ if and (not .Draft) (or (eq .Type "note") (eq .Type "post")) }}
 				<tr>
 					<td><time datetime="{{ .Created.Format "2006-01-02" }}">{{ .Created.Format "2006-01-02" }}</time></td>
-					<td><a href="{{ .RelPermalink }}">{{ .Title }}</a></td>
-					<td class="tags">
-						{{ if .Meta.tags }}
-							{{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
+					<td valign="middle">
+						{{ if (eq .Type "note") }}
+						<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 512" style="display:block;">
+							<path fill="black" fill-rule="evenodd" d="M448 343.045 343.045 448H64V64h384v279.045Zm-42.667-65.712V106.667H106.667v298.666h170.666v-128h128Zm0 42.667H320v85.333h5.333l80-80V320Z"/>
+						</svg>
 						{{ end }}
 					</td>
-				</tr>
-				{{ end }}
-			{{ end }}
-		</tbody>
-	</table>
-</section>
-
-<section>
-	<h2>Posts</h2>
-	<table>
-		<thead>
-			<tr>
-				<th>Date</th>
-				<th>Title</th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			{{ range .Pages }}
-				{{ if and (not .Draft) (eq .Type "post") }}
-				<tr>
-					<td><time datetime="{{ .Created.Format "2006-01-02" }}">{{ .Created.Format "2006-01-02" }}</time></td>
 					<td><a href="{{ .RelPermalink }}">{{ .Title }}</a></td>
 					<td class="tags">
 						{{ if .Meta.tags }}
