Removed dark mode and added xmagnify to project list

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 				--header-border-width: 2px;
 			}
 
-			@media (prefers-color-scheme: dark) {
+			/*@media (prefers-color-scheme: dark) {
 				:root {
 					--base-background: black;
 					--base-color: white;
@@ -35,7 +35,7 @@
 					--code-color: black;
 					--header-color: black;
 				}
-			}
+			}*/
 
 			* { box-sizing: border-box; }
 
