--- a/templates/index.html
+++ b/templates/index.html
@@ -50,23 +50,23 @@
 		<tbody>
 			<tr>
 				<td>Visualizations and exploration of binary files</td>
-				<td class="right"><a target="_blank" href="https://mitjafelicijan.github.io/binary-visualization/">https://mitjafelicijan.github.io/binary-visualization/</a></td>
+				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/binary-visualization/">https://mitjafelicijan.github.io/binary-visualization/</a></td>
 			</tr>
 			<tr>
 				<td>Easy convert between HEX to RGBA</td>
-				<td class="right"><a target="_blank" href="https://mitjafelicijan.github.io/hextorgba/">https://mitjafelicijan.github.io/hextorgba/</a></td>
+				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/hextorgba/">https://mitjafelicijan.github.io/hextorgba/</a></td>
 			</tr>
 			<tr>
 				<td>Unicode symbol explorer</td>
-				<td class="right"><a target="_blank" href="https://mitjafelicijan.github.io/symbols/">https://mitjafelicijan.github.io/symbols/</a></td>
+				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/symbols/">https://mitjafelicijan.github.io/symbols/</a></td>
 			</tr>
 			<tr>
 				<td>GGUF model list &amp; tools</td>
-				<td class="right"><a target="_blank" href="https://mitjafelicijan.github.io/gguf-list/">https://mitjafelicijan.github.io/gguf-list/</a></td>
+				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/gguf-list/">https://mitjafelicijan.github.io/gguf-list/</a></td>
 			</tr>
 			<tr>
 				<td>Maps of DOOM and other well known WADS</td>
-				<td class="right"><a target="_blank" href="https://mitjafelicijan.github.io/mapsofdoom/">https://mitjafelicijan.github.io/mapsofdoom/</a></td>
+				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/mapsofdoom/">https://mitjafelicijan.github.io/mapsofdoom/</a></td>
 			</tr>
 		</tbody>
 	</table>
