Only show content align button if JS enabled in browser

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,8 @@
 
 			.content-center { margin: 0 auto; }
 
+			#content_align_button { display: none; }
+
 			/* Hotfixes for strange behaviour. */
 			article iframe { margin: 0!important; }
 			pre code span { display: initial !important; }
@@ -103,6 +105,7 @@
 				</nav>
 				<nav>
 					<button id="content_align_button">center</button>
+					<script>content_align_button.style.display = "block";</script>
 				</nav>
 			</div>
 		</header>
