--- a/templates/index.html
+++ b/templates/index.html
@@ -4,41 +4,33 @@
 
 <section>
 	<h2>Notes / Posts</h2>
-	<table>
-		<thead>
-			<tr>
-				<th>Date</th>
-				<th width="20"></th>
-				<th>Title</th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			{{ range .Pages }}
-				{{ if and (not .Draft) (or (eq .Type "note") (eq .Type "post")) }}
-				<tr>
-					<td><time datetime="{{ .Created.Format "2006-01-02" }}">{{ .Created.Format "2006-01-02" }}</time></td>
-					<td valign="middle">
-						{{ if (eq .Type "note") }}
-						<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 512" style="display:block;">
-							<path fill="black" fill-rule="evenodd" d="M448 343.045 343.045 448H64V64h384v279.045Zm-42.667-65.712V106.667H106.667v298.666h170.666v-128h128Zm0 42.667H320v85.333h5.333l80-80V320Z"/>
-						</svg>
-						{{ end }}
-					</td>
-					<td><a href="{{ .RelPermalink }}">{{ .Title }}</a></td>
-					<td class="tags">
-						{{ if .Meta.tags }}
-							{{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
-						{{ end }}
-					</td>
-				</tr>
-				{{ end }}
-			{{ end }}
-		</tbody>
-	</table>
+	<ul class="post-list">
+		{{ range .Pages }}
+		{{ if and (not .Draft) (or (eq .Type "note") (eq .Type "post")) }}
+		<li>
+			<time datetime="{{ .Created.Format "2006-01-02" }}" class="static-prefix">{{ .Created.Format "2006-01-02" }}</time>
+			<span>
+				<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 512" style="display: block">
+					{{ if (eq .Type "note") }}
+					<path fill="black" fill-rule="evenodd" d="M448 343.045 343.045 448H64V64h384v279.045Zm-42.667-65.712V106.667H106.667v298.666h170.666v-128h128Zm0 42.667H320v85.333h5.333l80-80V320Z"/>
+					{{ end }}
+				</svg>
+			</span>
+			<span>
+				<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+				<span class="tags">
+					{{ if .Meta.tags }}
+					{{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
+					{{ end }}
+				</span>
+			</span>
+		</li>
+		{{ end }}
+		{{ end }}
+	</ul>
 </section>
 
-<section>
+<section class="hide-on-mobile">
 	<h2>Tools / Experiments</h2>
 	<table class="normal">
 		<thead>
@@ -63,6 +55,10 @@
 			<tr>
 				<td>GGUF model list &amp; tools</td>
 				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/gguf-list/">https://mitjafelicijan.github.io/gguf-list/</a></td>
+			</tr>
+			<tr>
+				<td>Soundscapes board</td>
+				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/soundscapes/">https://mitjafelicijan.github.io/soundscapes/</a></td>
 			</tr>
 			<tr>
 				<td>Maps of DOOM and other well known WADS</td>
