Added personal git link

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,8 @@
 				<a href="/">Home</a>
 				<a href="/projects.html">Projects</a>
 				<a href="https://github.com/mitjafelicijan/probe" target="_blank">Probe</a>
-				<a href="https://github.com/mitjafelicijan" target="_blank">Code</a>
+				<a href="https://git.mitjafelicijan.com" target="_blank">Code</a>
+				<a href="https://github.com/mitjafelicijan" target="_blank">GH</a>
 				<a href="https://github.com/mitjafelicijan/dotfiles" target="_blank" class="hide-on-mobile">Dotfiles</a>
 				<a href="/curriculum-vitae.html">CV</a>
 				<a href="/feed.xml" class="hide-on-mobile">RSS</a>
