--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,12 @@
 
 			section { margin-block-start: 3em; margin-block-end: 3em; }
 
+			blockquote {
+				border-left: 0.3em solid black;
+				padding-left: 1em;
+				margin-left: 0;
+			}
+
 			footer { font-size: small; }
 
 			ul.post-list { padding: 0em; }
@@ -45,7 +51,7 @@
 			h1, h2, h3, h4 { font-size: initial; }
 			article h2, article h3, article h4 { margin-block-start: 2.5em; }
 			article h1 { font-size: 130%; line-height: 110%; }
-			article code { background: yellow; padding: 0 0.2em; }
+			article code { background: lemonchiffon; padding: 0 0.2em; }
 			article pre { border: 1px solid var(--border-color); padding: 1em; line-height: 140%; text-wrap: nowrap; overflow-x: auto; }
 			article pre > code { background: initial; }
 
@@ -86,7 +92,7 @@
 			}
 		</style>
 
-		<!-- <script defer src="https://app.tinyanalytics.io/pixel/isfRNEahfHiS2Ttp"></script> -->
+		<script src="https://cdn.usefathom.com/script.js" data-site="OKIJWYKR" defer></script>
 	</head>
 
 	<body>
