New post: Integrated debugging in Vim

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,13 +32,7 @@
 			header nav span.title { font-weight: bold; }
 
 			section { margin-block-start: 3em; margin-block-end: 3em; }
-
-			blockquote {
-				border-left: 0.3em solid black;
-				padding-left: 1em;
-				margin-left: 0;
-			}
-
+			blockquote { border-left: 0.2em solid black; padding-left: 1em; margin-left: 0; }
 			footer { font-size: small; }
 
 			ul.post-list { padding: 0em; }
@@ -53,7 +47,7 @@
 			article h1 { font-size: 130%; line-height: 110%; }
 			article code { background: lemonchiffon; padding: 0 0.2em; }
 			article pre { border: 1px solid var(--border-color); padding: 1em; line-height: 140%; text-wrap: nowrap; overflow-x: auto; }
-			article pre > code { background: initial; }
+			article pre > code { background: initial; padding: 0; }
 
 			img, video, audio { max-width: 100%; }
 			figure { display: flex; justify-content: center; margin: 1.5em 0; }
