Body background now white

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 				color: #ffffff;
 			}
 
-			body { font-family: sans-serif; max-width: var(--content-width); margin: 0 auto; line-height: 160%; }
+			body { font-family: sans-serif; max-width: var(--content-width); margin: 0 auto; line-height: 160%; background: white; }
 
 			header { margin-block-start: 1em; margin-block-end: 4em; }
 			header nav { display: flex; gap: 1em; align-items: center; padding: 0.5em 0; border-bottom: 2px solid black; }
