--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 		{{ if and (not .Draft) (or (eq .Type "note") (eq .Type "post")) }}
 		<li>
 			<time datetime="{{ .Created.Format "2006-01-02" }}" class="static-prefix">{{ .Created.Format "2006-01-02" }}</time>
-			<span>
+			<span title="Note">
 				<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 512" style="display: block">
 					{{ if (eq .Type "note") }}
 					<path fill="black" fill-rule="evenodd" d="M448 343.045 343.045 448H64V64h384v279.045Zm-42.667-65.712V106.667H106.667v298.666h170.666v-128h128Zm0 42.667H320v85.333h5.333l80-80V320Z"/>
