--- a/templates/index.html
+++ b/templates/index.html
@@ -2,69 +2,84 @@
 
 {{ define "content" }}
 
+<section class="thumbnails hide-on-mobile">
+    <div>
+        <a href="https://github.com/mitjafelicijan/glitch" target="_blank"><img src="thumbnails/glitch.png"></a>
+        <div class="name">glitch x11 window manager</div>
+    </div>
+    <div>
+        <a href="https://github.com/mitjafelicijan/qwe-editor" target="_blank"><img src="thumbnails/qwe-editor.png"></a>
+        <div class="name">qwe code editor</div>
+    </div>
+    <div>
+        <a href="https://github.com/mitjafelicijan/toy-debugger" target="_blank"><img src="thumbnails/toy-debugger.png"></a>
+        <div class="name">toy debugger</div>
+    </div>
+</section>
+
 <section>
-	<h2>Notes / Posts</h2>
-	<ul class="post-list">
-		{{ range .Pages }}
-		{{ if and (not .Draft) (or (eq .Type "note") (eq .Type "post")) }}
-		<li>
-			<time datetime="{{ .Created.Format "2006-01-02" }}" class="static-prefix">{{ .Created.Format "2006-01-02" }}</time>
-			<span title="Note">
-				<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 512" style="display: block">
-					{{ if (eq .Type "note") }}
-					<path fill="black" fill-rule="evenodd" d="M448 343.045 343.045 448H64V64h384v279.045Zm-42.667-65.712V106.667H106.667v298.666h170.666v-128h128Zm0 42.667H320v85.333h5.333l80-80V320Z"/>
-					{{ end }}
-				</svg>
-			</span>
-			<span>
-				<a href="{{ .RelPermalink }}">{{ .Title }}</a>
-				<span class="tags">
-					{{ if .Meta.tags }}
-					{{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
-					{{ end }}
-				</span>
-			</span>
-		</li>
-		{{ end }}
-		{{ end }}
-	</ul>
+    <h2>Notes / Posts</h2>
+    <ul class="post-list">
+        {{ range .Pages }}
+        {{ if and (not .Draft) (or (eq .Type "note") (eq .Type "post")) }}
+        <li>
+            <time datetime="{{ .Created.Format "2006-01-02" }}" class="static-prefix">{{ .Created.Format "2006-01-02" }}</time>
+            <span title="Note">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 512" style="display: block">
+                    {{ if (eq .Type "note") }}
+                    <path fill="black" fill-rule="evenodd" d="M448 343.045 343.045 448H64V64h384v279.045Zm-42.667-65.712V106.667H106.667v298.666h170.666v-128h128Zm0 42.667H320v85.333h5.333l80-80V320Z"/>
+                    {{ end }}
+                </svg>
+            </span>
+            <span>
+                <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                <span class="tags">
+                    {{ if .Meta.tags }}
+                    {{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
+                    {{ end }}
+                </span>
+            </span>
+        </li>
+        {{ end }}
+        {{ end }}
+    </ul>
 </section>
 
 <section class="hide-on-mobile">
-	<h2>Tools / Experiments</h2>
-	<table class="normal">
-		<thead>
-			<tr>
-				<th>Title</th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Visualizations and exploration of binary files</td>
-				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/binary-visualization/">https://mitjafelicijan.github.io/binary-visualization/</a></td>
-			</tr>
-			<tr>
-				<td>Easy convert between HEX to RGBA</td>
-				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/hextorgba/">https://mitjafelicijan.github.io/hextorgba/</a></td>
-			</tr>
-			<tr>
-				<td>Unicode symbol explorer</td>
-				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/symbols/">https://mitjafelicijan.github.io/symbols/</a></td>
-			</tr>
-			<tr>
-				<td>GGUF model list &amp; tools</td>
-				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/gguf-list/">https://mitjafelicijan.github.io/gguf-list/</a></td>
-			</tr>
-			<tr>
-				<td>Soundscapes board</td>
-				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/soundscapes/">https://mitjafelicijan.github.io/soundscapes/</a></td>
-			</tr>
-			<tr>
-				<td>Maps of DOOM and other well known WADS</td>
-				<td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/mapsofdoom/">https://mitjafelicijan.github.io/mapsofdoom/</a></td>
-			</tr>
-		</tbody>
-	</table>
+    <h2>Tools / Experiments</h2>
+    <table class="normal">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Visualizations and exploration of binary files</td>
+                <td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/binary-visualization/">https://mitjafelicijan.github.io/binary-visualization/</a></td>
+            </tr>
+            <tr>
+                <td>Easy convert between HEX to RGBA</td>
+                <td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/hextorgba/">https://mitjafelicijan.github.io/hextorgba/</a></td>
+            </tr>
+            <tr>
+                <td>Unicode symbol explorer</td>
+                <td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/symbols/">https://mitjafelicijan.github.io/symbols/</a></td>
+            </tr>
+            <tr>
+                <td>GGUF model list &amp; tools</td>
+                <td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/gguf-list/">https://mitjafelicijan.github.io/gguf-list/</a></td>
+            </tr>
+            <tr>
+                <td>Soundscapes board</td>
+                <td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/soundscapes/">https://mitjafelicijan.github.io/soundscapes/</a></td>
+            </tr>
+            <tr>
+                <td>Maps of DOOM and other well known WADS</td>
+                <td class="text-right"><a target="_blank" href="https://mitjafelicijan.github.io/mapsofdoom/">https://mitjafelicijan.github.io/mapsofdoom/</a></td>
+            </tr>
+        </tbody>
+    </table>
 </section>
 {{ end }}
